# pcc

./: .gitignore  LICENSE  README.md  pcc.bat  pcc.ps1  pyproject.toml
.backup/: .gitignore.local  README.local.md
_tmp/: t47_try_except_divzero  t48_raise_valueerror  t49_list_indexerror
pcc/: __init__.py  __main__.py  build_driver.py  cli.py  codegen_c.py  frontend.py
runtime/: README_EXTENDED.md  rt_bigint.c  rt_bigint.h  rt_config.h  rt_dict.c  rt_dict.h  rt_error.c  rt_error.h  rt_exc.c  rt_exc.h  rt_list.c  rt_list.h  rt_math.c  rt_math.h  rt_string.c  rt_string.h  rt_string_ex.c  rt_string_ex.h  runtime.c  runtime.h
scripts/: build.ps1  run_tests.ps1  run_tests.py
tests/: README.md  __init__.py  conftest.py  t06_multi_vars_expr.py  t07_if_true.py  t09_if_nested.py  t10_while_countdown.py  t12_while_if_even.py  t14_func_sum_to.py  t15_func_forward_call.py  t18_rec_mutual.py  t20_continue_odds.py  t21_nested_break_continue.expected.txt  t21_nested_break_continue.py  t22_for_range_stop.py  t24_for_range_step_continue.py  t25_for_range_neg_step_break.py  t27_str_vars_concat.py  t28_str_chain_concat.py  t29_str_in_for_if.py  t30_bigint_add.expected.txt  t30_bigint_add.py  t32_bigint_cmp.py  t36_divmod_neg_b.expected.txt  t36_divmod_neg_b.py  t38_divmod_big.py  t39_div_in_rec.py  t40_pow_basic.expected.txt  t40_pow_basic.py  t41_pow_large.expected.txt  t41_pow_large.py  t42_pow_expr.expected.txt  t42_pow_expr.py  t43_pow_builtin_2args.expected.txt  t43_pow_builtin_2args.py  t44_pow_builtin_3args.expected.txt  t44_pow_builtin_3args.py  t45_pow_mixed.expected.txt  (+12 more)
(+64 files in other folders)
